# gRPC_API

./: CMakeLists.txt  Main.cpp
.devcontainer/: Dockerfile
CMake/: GenerateProtobuf.cmake
Protos/: AllServices.grpc.pb.cc  AllServices.grpc.pb.h  AllServices.pb.cc  AllServices.pb.h  AllServices.proto  AllServices_mock.grpc.pb.h  Client_Facture.grpc.pb.cc  Client_Facture.grpc.pb.h  Client_Facture.pb.cc  Client_Facture.pb.h  Client_Facture.proto  Client_Facture_mock.grpc.pb.h  Client_Invoice.grpc.pb.cc  Client_Invoice.grpc.pb.h  Client_Invoice.pb.cc  Client_Invoice.pb.h  Client_Invoice.proto  Client_Invoice_mock.grpc.pb.h  Client_Product.grpc.pb.cc  Client_Product.grpc.pb.h  Client_Product.pb.cc  Client_Product.pb.h  Client_Product.proto  Client_Product_mock.grpc.pb.h  Client_Register.grpc.pb.cc  Client_Register.grpc.pb.h  Client_Register.pb.cc  Client_Register.pb.h  Client_Register.proto  Client_Register_mock.grpc.pb.h
Protos/generated_protos/models/: Client.grpc.pb.cc  Client.grpc.pb.h  Client.pb.cc  Client.pb.h  Client_mock.grpc.pb.h  InvoiceDetails.grpc.pb.cc  InvoiceDetails.grpc.pb.h  InvoiceDetails.pb.cc  InvoiceDetails.pb.h  InvoiceDetails_mock.grpc.pb.h  Invoices.grpc.pb.cc  Invoices.grpc.pb.h  Invoices.pb.cc  Invoices.pb.h  Invoices_mock.grpc.pb.h  Products.grpc.pb.cc  Products.grpc.pb.h  Products.pb.cc  Products.pb.h  Products_mock.grpc.pb.h  ServiceStatus.grpc.pb.cc  ServiceStatus.grpc.pb.h  ServiceStatus.pb.cc  ServiceStatus.pb.h  ServiceStatus_mock.grpc.pb.h
Protos/generated_protos_services/model_services/: ClientService.grpc.pb.cc  ClientService.grpc.pb.h  ClientService.pb.cc  ClientService.pb.h  ClientService_mock.grpc.pb.h  InvoiceDetailsService.grpc.pb.cc  InvoiceDetailsService.grpc.pb.h  InvoiceDetailsService.pb.cc  InvoiceDetailsService.pb.h  InvoiceDetailsService_mock.grpc.pb.h  InvoicesService.grpc.pb.cc  InvoicesService.grpc.pb.h  InvoicesService.pb.cc  InvoicesService.pb.h  InvoicesService_mock.grpc.pb.h  ProductsService.grpc.pb.cc  ProductsService.grpc.pb.h  ProductsService.pb.cc  ProductsService.pb.h  ProductsService_mock.grpc.pb.h
Protos/model_services/: ClientService.proto  InvoiceDetailsService.proto  InvoicesService.proto  ProductsService.proto
Protos/models/: Client.proto  InvoiceDetails.proto  Invoices.proto  Products.proto  ServiceStatus.proto
Sources/: server_init.cpp
repository/: ClientRepository.hpp  Database.cpp  Database.hpp
services/: ClientService.cpp  ClientService.hpp  InvoiceDetailsService.hpp  InvoicesService.hpp  ProductsService.hpp
